# baumerDriver

./: CMakeLists.txt  README.md
neoAPI/include/neoapi/: neoapi_camera_info.hpp
neoAPI/lib/: libneoapi_cpp.so.1.2  libneoapi_cpp.so.1.2.1  libtracelogger.so.2.1  libtracelogger.so.2.1.6
src/: getting_started.cpp
